--- a/basin/Basin3DTest.html
+++ b/basin/Basin3DTest.html
@@ -5,7 +5,7 @@
   			@author: rkwright@geofx.com
 		-->
 		<title>Basin 3D</title>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+		<meta charset="UTF-8"/>
 
 		<!-- Set the viewport size to the screen size, so it will be displayed maximized, but unscaled. -->
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
