--- a/basin/ChannelSlope.html
+++ b/basin/ChannelSlope.html
@@ -24,22 +24,19 @@
         var     logChart;
         var     linearOptions;
         var     logOptions;
-        var     linearDiv;
-        var     logDiv;
+        var     areas = [1, 2, 4, 8, 16, 32, 64, 128, 256];
 
-
-
-            function onload() {
-                expSlider = document.getElementById("expSlider");
-                expSlider.onchange = expSliderChange;
-                expAmount = document.getElementById("expAmount");
-                numSlider = document.getElementById("numSlider");
-                numSlider.onchange = numSliderChange;
-                numAmount = document.getElementById("numAmount");
-                intcpSlider = document.getElementById("intcpSlider");
-                intcpSlider.onchange = intcpSliderChange;
-                intcpAmount = document.getElementById("intcpAmount");
-           }
+        function onload() {
+            expSlider = document.getElementById("expSlider");
+            expSlider.onchange = expSliderChange;
+            expAmount = document.getElementById("expAmount");
+            numSlider = document.getElementById("numSlider");
+            numSlider.onchange = numSliderChange;
+            numAmount = document.getElementById("numAmount");
+            intcpSlider = document.getElementById("intcpSlider");
+            intcpSlider.onchange = intcpSliderChange;
+            intcpAmount = document.getElementById("intcpAmount");
+        }
 
         function expSliderChange() {
             expAmount.innerHTML = this.value;
@@ -60,20 +57,25 @@
         }
 
         function updateSlopeData() {
-            slopeData = new google.visualization.DataTable();
-            slopeData.addColumn('number', 'Area');
-            slopeData.addColumn('number', 'Slope');
-            slopeData.addRows([
-                [ 1, calcSlope(1) ],
-                [ 2, calcSlope(2)],
-                [ 4, calcSlope(4)],
-                [ 8, calcSlope(8)],
-                [ 16, calcSlope(16)],
-                [ 32, calcSlope(32)],
-                [ 64, calcSlope(64)],
-                [ 128, calcSlope(128)],
-                [ 256, calcSlope(256)]
-            ]);
+
+            if (slopeData.getNumberOfRows() > 0) {
+                for (var i = 0; i<areas.length; i++ ) {
+                    slopeData.setValue(i, 1, calcSlope(areas[i]));
+                }
+            }
+            else {
+                slopeData.addRows([
+                    [1, calcSlope(1)],
+                    [2, calcSlope(2)],
+                    [4, calcSlope(4)],
+                    [8, calcSlope(8)],
+                    [16, calcSlope(16)],
+                    [32, calcSlope(32)],
+                    [64, calcSlope(64)],
+                    [128, calcSlope(128)],
+                    [256, calcSlope(256)]
+                ]);
+            }
 
             linearChart.clearChart();
             logChart.clearChart();
@@ -85,15 +87,15 @@
          * @returns {number}
          */
         function calcSlope( area ) {
-            var val = (BASIN.QNUMER / Math.pow( area + BASIN.QINTCP, BASIN.QEXPON))
+            var val = (qNumer / Math.pow( area + qIntcp, qExpon))
             console.log("Val = " + val.toFixed(3));
             return val;
         }
 
         function drawChart() {
-            //slopeData = new google.visualization.DataTable();
-            //slopeData.addColumn('number', 'Area');
-            //slopeData.addColumn('number', 'Slope');
+            slopeData = new google.visualization.DataTable();
+            slopeData.addColumn('number', 'Area');
+            slopeData.addColumn('number', 'Slope');
 
             linearOptions = {
                 title: 'Channel Slope vs. Area',
@@ -102,7 +104,7 @@
                 height: 500,
                 hAxis: {
                     title: 'Area',
-                    ticks: [0, 64, 128, 192, 256]
+                    ticks: [32, 64, 96, 128, 160, 192, 224, 256]
                 },
                 vAxis: {
                     title: 'Slope'
@@ -117,7 +119,7 @@
                 hAxis: {
                     title: 'Area',
                     scaleType: 'log',
-                    ticks: [0, 16, 32, 64, 128, 256]
+                    ticks: [1, 2, 4, 8, 16, 32, 64, 128, 256]
                 },
                 vAxis: {
                     title: 'Slope'
@@ -142,7 +144,7 @@
         <label for="numSlider">Numerator</label>
         <input id="numSlider" type="range" min="0.1" max="2.0" step="0.1" value="1.0">
         <div id="numAmount">1.0</div>
-        <label for="intcpSlider">Numerator</label>
+        <label for="intcpSlider">Intercept</label>
         <input id="intcpSlider" type="range" min="0.1" max="2.0" step="0.1" value="1.0">
         <div id="intcpAmount">1.0</div>
     </div>
