--- a/basin/ChannelSlope.html
+++ b/basin/ChannelSlope.html
@@ -8,7 +8,7 @@
 
         var BASIN = {
             QNUMER   : 1.0,	    // numerator of slope f(Q) eqn.
-            QEXPON   : 0.1,     // exponent of slope f(Q) eqn
+            QEXPON   : -0.5,     // exponent of slope f(Q) eqn
             QINTCP   : 1.0,     // offset for slope f(Q) eqn
             RUGOSITY : 0.5     // degree of rugosity (channel interfluve height)
         };
@@ -87,7 +87,7 @@
          * @returns {number}
          */
         function calcSlope( area ) {
-            var val = (qNumer / Math.pow( area + qIntcp, qExpon));
+            var val = (qNumer / Math.pow( 256 / area, qExpon));
             console.log("Val = " + val.toFixed(3));
             return val;
         }
@@ -139,7 +139,7 @@
 
     <div>
         <label for="expSlider">Exponent</label>
-        <input id="expSlider" type="range" min="0.0" max="1.0" step="0.01" value="0.5">
+        <input id="expSlider" type="range" min="-1.0" max="1.0" step="0.01" value="-0.5">
         <div id="expAmount">0.5</div>
         <label for="numSlider">Numerator</label>
         <input id="numSlider" type="range" min="0.1" max="2.0" step="0.1" value="1.0">
