--- a/basin/Basin3DTest.html
+++ b/basin/Basin3DTest.html
@@ -16,6 +16,7 @@
 		<script src="../three-js/OrbitControls-Touch-Ortho.js" type="text/javascript"></script>
 		<script src="../three-js/stats.js" type="text/javascript"></script>
         <script src="../gfx/gfx-scene.js" type="text/javascript"></script>
+        <script src="../gfx/CylinderUtil.js" type="text/javascript"></script>
         <script src="../maze/Maze.js"></script>
         <script src="../maze/MazeRat.js"></script>
         <script src="Basin.js"></script>
@@ -23,7 +24,7 @@
 	</head>
 	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
-        var NCELLS = 64;
+        var NCELLS = 32;
         var basin3D;
 
         var gfxScene = new GFX.Scene( {
@@ -36,25 +37,6 @@
 
         animateScene();
 
-        function findIndex( values, key, first,  last ) {
-            if (values[first] <= key && values[first+1] >= key) { // stopping condition
-
-                return first;
-            }
-
-            var imid = first + (last - first) / 2;
-
-            if (first === last || imid === first) {
-                return -1;
-            }
-            if (values[imid] > key) {
-                return findIndex(values, key, first, imid);
-            }
-            else if (values[imid] <= key) {
-                return findIndex( values, key, imid, last);
-            }
-        }
-
         /**
          * Initialize the Demo.
          */
@@ -62,10 +44,51 @@
 
             var startTime = performance.now();
 
+            //drawCylinders();
+
             basin3D = new BASIN3D.Basin3D(NCELLS);
 
             var elapsed = (performance.now() - startTime)/1000.0;
             console.log("Basin complete! elapsed: " +  elapsed.toFixed(3)  );
+        }
+
+        function drawLines() {
+            var mat =  new THREE.LineBasicMaterial({color: 0xff0000});
+            var NLINES = 200;
+
+            var geometry = new THREE.Geometry();
+
+            for (var n=0; n<NLINES; n++ ) {
+                geometry.vertices.push( new THREE.Vector3( Math.random(), Math.random(), Math.random()) );
+                geometry.vertices.push( new THREE.Vector3( Math.random(), Math.random(), Math.random()) );
+
+            }
+
+            var line = new THREE.LineSegments(geometry, mat);
+            gfxScene.add(line);
+        }
+
+        function drawCylinders() {
+            var mat =  new THREE.MeshBasicMaterial({color: 0xff0000});
+            var group = new THREE.Group();
+
+            var NLINES = 5000;
+            cylinderUtil = new GFX.CylinderUtil();
+
+            for (var n=0; n<NLINES; n++ ) {
+                var cylMesh = cylinderUtil.createCylinder(
+                    new THREE.Vector3( Math.random(), Math.random(), Math.random()),
+                    new THREE.Vector3( Math.random(), Math.random(), Math.random()),
+                    //new THREE.Vector3( 1,2,3),
+                    //new THREE.Vector3( 3,2,1),
+                    0.1,
+                    3,
+                    mat);
+
+                group.add(cylMesh);
+           }
+
+           gfxScene.add(group);
         }
 
         /**
