Added option to display the camera position info in the lower-right corner of the screen.  Added the flag to enable this into Basin3DTest.

--- a/basin/Basin3DTest.html
+++ b/basin/Basin3DTest.html
@@ -24,11 +24,12 @@
 	</head>
 	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
-        var NCELLS = 64;
+        var NCELLS = 32;
         var basin3D;
 
         var gfxScene = new GFX.Scene( {
             cameraPos : [-9, 7, -9],
+			cameraInfo: true,
             controls:true,
             displayStats:true
         });
