--- a/basin/Basin3DTest.html
+++ b/basin/Basin3DTest.html
@@ -15,7 +15,8 @@
 		<script src="../three-js/Detector.js" type="text/javascript"></script>
 		<script src="../three-js/stats.js" type="text/javascript"></script>
 		<script src="../gfx/OrbitControls-Touch-Ortho.js" type="text/javascript"></script>
-        <script src="../gfx/gfx-scene.js" type="text/javascript"></script>
+		<script src="../three-js/dat.gui.min.js" type="text/javascript"></script>
+		<script src="../gfx/gfx-scene.js" type="text/javascript"></script>
         <script src="../gfx/CylinderUtil.js" type="text/javascript"></script>
         <script src="../maze/Maze.js"></script>
         <script src="../maze/MazeRat.js"></script>
@@ -24,15 +25,20 @@
 	</head>
 	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
-        var NCELLS = 128;
+        var nCells = 64;
+        var MIN_CELLS = 4;
+        var MAX_CELLS = 512;
         var basin3D;
 
         var gfxScene = new GFX.Scene( {
             cameraPos : [-9, 7, -9],
 			cameraInfo: true,
             controls:true,
-            displayStats:true
+            displayStats:true,
+            datgui:true
         });
+
+        setupDatGUI();
 
         initializeDemo();
 
@@ -47,10 +53,15 @@
 
             //drawCylinders();
 
-            basin3D = new BASIN3D.Basin3D(NCELLS);
+            buildBasin( nCells );
 
             var elapsed = (performance.now() - startTime)/1000.0;
             console.log("Basin complete! elapsed: " +  elapsed.toFixed(3)  );
+       }
+
+        function buildBasin( ncells ) {
+
+            basin3D = new BASIN3D.Basin3D(ncells);
         }
 
         function drawLines() {
@@ -90,6 +101,28 @@
            }
 
            gfxScene.add(group);
+        }
+
+        /**
+         * Initialize the dat.gui library and the options elements
+         */
+        function setupDatGUI() {
+            var options = [];
+
+            options.ncells = nCells;
+
+            gfxScene.gui.add(options, 'ncells', MIN_CELLS, MAX_CELLS).step(4).onFinishChange(function() {
+
+                if (options.ncells !== nCells) {
+
+                    nCells = options.ncells;
+
+                    basin3D.deleteBasin();
+                    buildBasin(nCells);
+                }
+            });
+
+            return options;
         }
 
         /**
