Beginning process of creating hurricane model

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -13,7 +13,7 @@
 
         var xobj = new XMLHttpRequest();
         xobj.overrideMimeType("application/json");
-        xobj.open('GET', "hurrdata.json", true);
+        xobj.open('GET', "hurdat2-1851-2016-041117.json", true);
         xobj.onreadystatechange = function () {
             if (xobj.readyState === XMLHttpRequest.HEADERS_RECEIVED) {
                 console.log(xobj.getAllResponseHeaders());
