Initial commit of the hurrican demo files.  Doesn't work yet.

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Hurricane Demo</title>
+
+    <!-- Set the viewport size to the screen size, so it will be displayed maximized, but unscaled. -->
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"/>
+
+    <!-- Include several libraries from THREE.js and the Scene class  -->
+    <script src="../three-js/three.js"></script>
+    <script src="../three-js/Detector.js"></script>
+    <script src="../three-js/stats.js"></script>
+    <script src="../gfx/OrbitControls-Touch-Ortho.js"></script>
+    <script src="../three-js/dat.gui.min.js"></script>
+    <script src="../gfx/gfx-scene.js"></script>
+    <script src="Julian.js"></script>
+    <script src="Carto.js"></script>
+    <script src="MetParm.js"></script>
+    <script src="StormParm.js"></script>
+    <script src="HurrModel.js"></script>
 </head>
 <body>
 
