Renamed StormData as StormJSON as it is about loading the JSON file.  Created new StormData file which mirrors the JSON format in the storm file.  Updated the script tags to in HurrDemo to reflect this.

--- a/hurricane/HurrDemo.html
+++ b/hurricane/HurrDemo.html
@@ -20,7 +20,7 @@
     <script src="Carto.js"></script>
     <script src="MetParm.js"></script>
     <script src="StormParm.js"></script>
-    <script src="StormData.js"></script>
+    <script src="StormJSON.js"></script>
     <script src="HurrModel.js"></script>
 </head>
 <body>
